Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -219,9 +219,9 @@
       \resumeProjectHeading
           {\textbf{Aranpani} $|$ \textit{Fundraiser Management System} $|$ \href{https://kr-aashish.github.io/aranpani-api-docs}{\underline{OpenAPI Docs}}}{Nov 2023 -- Dec 2023}
           \resumeItemListStart
-            \resumeItem{Modeled project, donor \& payment endpoints with \textbf{JWT} auth, Joi validation, and S3 presigned URLs for media uploads}
-            \resumeItem{Penned \textbf{UTs} and \textbf{acceptance test} suites for A endpoints, maintaining \textbf{90\%+} code coverage, with Jest and SuperTest}
-            \resumeItem{Ensured application's reliability with MongoDB Replica Sets, in PM2 cluster mode with APM, leveraging Nginx as a web server and Route53 name server}
+            \resumeItem{Modeled project, donor and payment APIs with \textbf{JWT} auth, \textbf{Joi} validation, and S3 \textbf{presigned} URLs for media uploads}
+            \resumeItem{Penned \textbf{Unit} and \textbf{Acceptance} test suites, maintaining a code coverage of above \textbf{90\%}, leveraging \textbf{Jest} and \textbf{SuperTest}}
+            \resumeItem{Engineered resilience with \textbf{MongoDB} Replica Sets, \textbf{PM2} cluster \& APM, \textbf{Nginx} web server and \textbf{Route53} name server}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 \vspace{-15pt}
