Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -164,10 +164,10 @@
         \resumeItem{Redesigned the IMAP service, improving wait times by 16\% through event\textendash based mail fetch execution, auto\textendash retry mechanisms, and configurable domains.}
         \resumeItem{Improved the email compose experience flow, reducing errors by 30\%, and migrated mail view APIs from a database to Elasticsearch, which reduced mailbox latency by 25\%.}
         \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
-        \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
-        \resumeItem{Migrated 40 microservices from CloudWatch to Last9 with OTEL, achieving a 30\% reduction in costs, right\textendash sized ES/RDS clusters, dropped a 300M index, and decommissioned 2 redundant RDS instances and 1 EFS.}
-        \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
-        \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
+        % \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
+        % \resumeItem{Migrated 40 microservices from CloudWatch to Last9 with OTEL, achieving a 30\% reduction in costs, right\textendash sized ES/RDS clusters, dropped a 300M index, and decommissioned 2 redundant RDS instances and 1 EFS.}
+        % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
+        % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -176,9 +176,10 @@
       \resumeItemListStart
         \resumeItem{Created Data Service APIs to migrate a Cancer Registry System, from Oracle PL/SQL Stored Procedures \& Triggers to TS, leveraging SQL Server \& Prisma}
         \resumeItem{Migrated .NET Web Services by creating a streaming RPC client \& SOAP API server with WSDL, in Node.js, which consumes DLLs via wrappers using FFI}
-        \resumeItem{Scheduled cron job for consuming HL7 documents, with transactional locks, and a configurable job interval, scaled to Node.js cluster threads through IPC}
-        \resumeItem{Wrote unit \& integration test suites, with a statement \& branch coverage of 85\%, optimized on\textendash premise infra requirements with Grafana's K6 perf tests}
-        \resumeItem{Configured build pipeline with coverage reporter \& static code analyzer, and release pipeline with Azure agents, deploying in Windows servers with IIS}
+        % \resumeItem{Scheduled cron job for consuming HL7 documents, with transactional locks, and a configurable job interval, scaled to Node.js cluster threads through IPC}
+        % \resumeItem{Wrote unit \& integration test suites, with a statement \& branch coverage of 85\%, optimized on\textendash premise infra requirements with Grafana's K6 perf tests}
+        % \resumeItem{Configured build pipeline with coverage reporter \& static code analyzer, and release pipeline with Azure agents, deploying in Windows servers with IIS}
+        \resumeItem{Line}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -187,9 +188,9 @@
       \resumeItemListStart
         \resumeItem{Designed a UUID for the CGS Dashboard versioning and improved cadence support from weekly to every second, in the Consolidation EMR's ETL job}
         \resumeItem{Revamped the Audit Log DynamoDB to store all the metadata for the CGS Dashboard, tracking the published versions, reflecting in the CGS Version UI}
-        \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
-        \resumeItem{Reengineered the CSV View \& Diff modules to render the dashboard directly from S3, eliminating the cost of maintaining the Quarterly Competitor DDB}
-        \resumeItem{Implemented a CSV diff algorithm to compare the dashboard versions by the given primary index, providing a compact list of changes to the stakeholders}
+        % \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
+        % \resumeItem{Reengineered the CSV View \& Diff modules to render the dashboard directly from S3, eliminating the cost of maintaining the Quarterly Competitor DDB}
+        % \resumeItem{Implemented a CSV diff algorithm to compare the dashboard versions by the given primary index, providing a compact list of changes to the stakeholders}
       \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -227,23 +228,23 @@
 \vspace{-15pt}
 
 
-%------RELEVANT COURSEWORK-------
-\section{Coursework \& Certifications}
-        \begin{multicols}{3}
-            \begin{itemize}[itemsep=-2pt, parsep=3pt]
-                \item Programming \& Data Structures
-                \item Algorithms 1
-                \item Applied Algorithms and DS
-                \item Probability and Statistics
-                \item Data Analytics
-                \item Machine Learning Foundations
-                \item Deep Learning Foundations
-                \item Winter School of AI \& Robotics
-                \item AlgoExpert $|$ algoexpert.io
-                \item FrontendExpert $|$ algoexpert.io
-                \item SystemsExpert $|$ algoexpert.io
-                \item InfraExpert $|$ algoexpert.io
-            \end{itemize}
-        \end{multicols}
+% %------RELEVANT COURSEWORK-------
+% \section{Coursework \& Certifications}
+%         \begin{multicols}{3}
+%             \begin{itemize}[itemsep=-2pt, parsep=3pt]
+%                 \item Programming \& Data Structures
+%                 \item Algorithms 1
+%                 \item Applied Algorithms and DS
+%                 \item Probability and Statistics
+%                 \item Data Analytics
+%                 \item Machine Learning Foundations
+%                 \item Deep Learning Foundations
+%                 \item Winter School of AI \& Robotics
+%                 \item AlgoExpert $|$ algoexpert.io
+%                 \item FrontendExpert $|$ algoexpert.io
+%                 \item SystemsExpert $|$ algoexpert.io
+%                 \item InfraExpert $|$ algoexpert.io
+%             \end{itemize}
+%         \end{multicols}
 
 \end{document}
