chore: refactor skill section's font size

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -132,6 +132,7 @@
 \section{Technical Skills}
 \begin{flushleft}
 \setlength{\leftskip}{0.15in}
+\small
 \textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
 \vspace{1pt}
 \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
