Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -134,17 +134,17 @@
 \setlength{\leftskip}{0.15in}
 \small
 \textbf{Programming Languages}{: C++, Java, Golang, Python, JavaScript, TypeScript} \\
-\vspace{1pt}
+\vspace{2pt}
 \textbf{Markup/Query Languages}{: HTML5, CSS3, T‐SQL, pgSQL} \\
-\vspace{1pt}
+\vspace{2pt}
 \textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
-\vspace{1pt}
+\vspace{2pt}
 \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\    
 \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
-\vspace{1pt}
-\textbf{Deployment}{: Docker, GitHub Actions, Azure Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
-\vspace{1pt}
-\textbf{Cloud}{: AWS S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, CloudWatch, SNS, SQS, SES, IAM, Route53 }
+\vspace{2pt}
+\textbf{Deployment}{: Docker, GitHub Actions, Azure DevOps Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
+\vspace{2pt}
+\textbf{Cloud}{: AWS S3, EC2, ECS, ELB, Lambda, RDS, ElastiCache, CloudWatch, SNS, SQS, SES, IAM, CloudFront, Route53 }
 \end{flushleft}
  \vspace{-16pt}
 
