Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -112,9 +112,9 @@
 %----------HEADING----------
 \begin{center}
     {\Huge \scshape Aashish Kumar} \\ \vspace{1pt}
-    \small \raisebox{-0.1\height}\faPhone\ +918084662242 ~ \href{mailto:aashishkr.iitkgp@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{aashishkr.iitkgp@gmail.com}} ~ 
-    \href{https://www.linkedin.com/in/kr-aashish/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/kr-aashish}}  ~
-    \href{https://github.com/kr-aashish}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/kr-aashish}}
+    \small \raisebox{-0.1\height}\faPhone\ +918084662242 ~ \href{mailto:aashishkr.iitkgp@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  aashishkr.iitkgp@gmail.com} ~ 
+    \href{https://www.linkedin.com/in/kr-aashish/}{\raisebox{-0.2\height}\faLinkedin\ linkedin.com/in/kr-aashish}  ~
+    \href{https://github.com/kr-aashish}{\raisebox{-0.2\height}\faGithub\ github.com/kr-aashish}
     \vspace{-8pt}
 \end{center}
 
@@ -153,7 +153,6 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
-
     \resumeSubheading
       {FlashMonk}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
