chore: refactor spacing post headers

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -111,7 +111,7 @@
 
 %----------HEADING----------
 \begin{center}
-    {\Huge \scshape Aashish Kumar} \\ \vspace{1pt}
+    {\Huge \scshape Aashish Kumar} \\ \vspace{2pt}
     \small \raisebox{-0.1\height}\faPhone\ +918084662242 ~ \href{mailto:aashishkr.iitkgp@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  aashishkr.iitkgp@gmail.com} ~ 
     \href{https://www.linkedin.com/in/kr-aashish/}{\raisebox{-0.2\height}\faLinkedin\ linkedin.com/in/kr-aashish}  ~
     \href{https://github.com/kr-aashish}{\raisebox{-0.2\height}\faGithub\ github.com/kr-aashish}
@@ -180,13 +180,13 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Amazon}{May 2022 -- Jul 2022}
+      {Amazon}{May 2022 - Jul 2022}
       {Software Development Engineer Intern}{Bangalore}
       \resumeItemListStart
         \resumeItem{Designed a UUID for the CGS Dashboard versioning and improved cadence support from weekly to every second, in the Consolidation EMR's ETL job}
-        \resumeItem{Revamped the Audit Log DynamoDB to store all the metadata for the CGS Dashboard, tracking the published versions, reflecting in the CGS Version UI}
+        % \resumeItem{Revamped the Audit Log DynamoDB to store all the metadata for the CGS Dashboard, tracking the published versions, reflecting in the CGS Version UI}
         % \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
-        % \resumeItem{Reengineered the CSV View \& Diff modules to render the dashboard directly from S3, eliminating the cost of maintaining the Quarterly Competitor DDB}
+        \resumeItem{Re-engineered the \textbf{CSV View} to render the dashboard directly from \textbf{S3}, \textbf{eliminating the cost} of maintaining the DDB}
         % \resumeItem{Implemented a CSV diff algorithm to compare the dashboard versions by the given primary index, providing a compact list of changes to the stakeholders}
       \resumeItemListEnd
     
@@ -199,7 +199,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Jira 2.0}{Apr 2024 -- Jun 2024}
+      {Jira 2.0}{Apr 2024 - Jun 2024}
       {Autonomous Project Management Suite}{\href{https://gist.github.com/kr-aashish/5d1b184bb082b29c0534861d07c2f25a}{View System Design}}
       \resumeItemListStart
         \resumeItem{Crafted a \textbf{Lambda}, which triggers upon FRD upload to \textbf{S3}, and creates user stories using \textbf{Llama3} running in an \textbf{EC2}}
@@ -208,7 +208,7 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {DeployX}{Jan 2024 -- Mar 2024}
+      {DeployX}{Jan 2024 - Mar 2024}
       {UI Deployment Automation}{\href{https://vercel.com/blog/behind-the-scenes-of-vercels-infrastructure}{Design Reference}}
       \resumeItemListStart
         \resumeItem{Built an API server with \textbf{RDS}, queuing build jobs and streaming logs to \textbf{Kafka} for \textbf{ClickHouse}, accessible via polling}
@@ -217,7 +217,7 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Aranpani}{Nov 2023 -- Dec 2023}
+      {Aranpani}{Nov 2023 - Dec 2023}
       {Fundraiser Management System}{\href{https://kr-aashish.github.io/aranpani-api-docs}{OpenAPI Docs}}
       \resumeItemListStart
         \resumeItem{Modeled project, donor and payment APIs with \textbf{JWT} auth, \textbf{Joi} validation, and S3 \textbf{presigned} URLs for media uploads}
