Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -166,6 +166,7 @@
         % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
         \resumeItem{Line}
       \resumeItemListEnd
+      \vspace{1.5pt}
 
     \resumeSubheading
       {RootQuotient}{Jun 2023 - Nov 2024}
@@ -178,6 +179,7 @@
         % \resumeItem{Configured build pipeline with coverage reporter \& static code analyzer, and release pipeline with Azure agents, deploying in Windows servers with IIS}
         \resumeItem{Line}
       \resumeItemListEnd
+      \vspace{1.5pt}
 
     \resumeSubheading
       {Amazon}{May 2022 - Jul 2022}
@@ -206,6 +208,7 @@
         \resumeItem{Facilitated \textbf{Event Bridge} to consume Slack messages, leveraged LLMs through \textbf{Flask} APIs to compile updates on tasks}
         \resumeItem{Employed \textbf{SES} to dispatch task approvals to stakeholders, then invoked issue tracker APIs to reflect changes in backlog}
       \resumeItemListEnd
+      \vspace{1.5pt}
 
     \resumeSubheading
       {DeployX}{Jan 2024 - Mar 2024}
@@ -215,6 +218,7 @@
         \resumeItem{Provisioned an \textbf{ECS} cluster which runs \textbf{ECR} images in \textbf{Fargate}, to process the build jobs and dump the artifacts to \textbf{S3}}
         \resumeItem{Developed a \textbf{reverse proxy} for UI builds, streaming assets from \textbf{S3}, mapping subdomains to S3 keys using RDS query}
       \resumeItemListEnd
+      \vspace{1.5pt}
 
     \resumeSubheading
       {Aranpani}{Nov 2023 - Dec 2023}
