Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -188,8 +188,8 @@
         \resumeItem{Designed a UUID for the CGS Dashboard versioning and improved cadence support from weekly to every second, in the Consolidation EMR's ETL job}
         % \resumeItem{Revamped the Audit Log DynamoDB to store all the metadata for the CGS Dashboard, tracking the published versions, reflecting in the CGS Version UI}
         % \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
-        \resumeItem{Re-engineered the \textbf{CSV View} to render the dashboard directly from \textbf{S3}, \textbf{eliminating the cost} of maintaining the DDB}
-        % \resumeItem{Implemented a CSV diff algorithm to compare the dashboard versions by the given primary index, providing a compact list of changes to the stakeholders}
+        \resumeItem{Reengineered the \textbf{CSV View} to render the dashboard directly from \textbf{S3}, \textbf{eliminating the cost} of maintaining the DDB}
+        \resumeItem{Devised \textbf{CSV diff} algorithm to compare dashboard versions by primary index, providing list of changes to stakeholders}
       \resumeItemListEnd
     
   \resumeSubHeadingListEnd
