--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -162,8 +162,8 @@
         % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         % \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
         % \resumeItem{Migrated 40 microservices from CloudWatch to Last9 with OTEL, achieving a 30\% reduction in costs, right\textendash sized ES/RDS clusters, dropped a 300M index, and decommissioned 2 redundant RDS instances and 1 EFS.}
-        % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
-        % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs.}
+        % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs}
+        % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs}
         \resumeItem{Line}
       \resumeItemListEnd
       \vspace{1.5pt}
@@ -172,12 +172,11 @@
       {RootQuotient}{Jun 2023 - Nov 2024}
       {Software Development Engineer}{Chennai}
       \resumeItemListStart
-        \resumeItem{Created Data Service APIs to migrate a Cancer Registry System, from Oracle PL/SQL Stored Procedures \& Triggers to TS, leveraging SQL Server \& Prisma}
-        \resumeItem{Migrated .NET Web Services by creating a streaming RPC client \& SOAP API server with WSDL, in Node.js, which consumes DLLs via wrappers using FFI}
-        % \resumeItem{Scheduled cron job for consuming HL7 documents, with transactional locks, and a configurable job interval, scaled to Node.js cluster threads through IPC}
-        % \resumeItem{Wrote unit \& integration test suites, with a statement \& branch coverage of 85\%, optimized on\textendash premise infra requirements with Grafana's K6 perf tests}
-        % \resumeItem{Configured build pipeline with coverage reporter \& static code analyzer, and release pipeline with Azure agents, deploying in Windows servers with IIS}
-        \resumeItem{Line}
+        \resumeItem{Created Data Service APIs to migrate Cancer Registry System, from \textbf{PL/SQL} to \textbf{TS}, leveraging \textbf{MS SQL} \& Prisma}
+        \resumeItem{Migrated .NET Web Services with RPC client \& SOAP APIs with WSDL in Node.js, consuming DLLs via FFI wrappers}
+        \resumeItem{Scheduled \textbf{cron} job consuming HL7 documents with locks and \textbf{configurable} interval, scaled to cluster threads via \textbf{IPC}}
+        \resumeItem{Wrote unit \& integration test suites with a coverage of \textbf{85\%}, optimized on\textendash premise infra using Grafana's \textbf{K6} perf tests}
+        \resumeItem{Configured build pipeline with static code analyzer, and release pipeline with Azure agents, deploying to Windows \textbf{IIS}}
       \resumeItemListEnd
       \vspace{1.5pt}
 
@@ -185,8 +184,8 @@
       {Amazon}{May 2022 - Jul 2022}
       {Software Development Engineer Intern}{Bangalore}
       \resumeItemListStart
-        \resumeItem{Designed a UUID for the CGS Dashboard versioning and improved cadence support from weekly to every second, in the Consolidation EMR's ETL job}
-        % \resumeItem{Revamped the Audit Log DynamoDB to store all the metadata for the CGS Dashboard, tracking the published versions, reflecting in the CGS Version UI}
+        \resumeItem{Designed \textbf{UUID} for CGS Dashboard versioning and improved cadence from \textbf{weekly to every second} in the EMR job}
+        \resumeItem{Revamped Audit Log DynamoDB to store metadata for CGS Dashboard, tracking published versions in CGS Version UI}
         % \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
         \resumeItem{Reengineered the \textbf{CSV View} to render the dashboard directly from \textbf{S3}, \textbf{eliminating the cost} of maintaining the DDB}
         \resumeItem{Devised \textbf{CSV diff} algorithm to compare dashboard versions by primary index, providing list of changes to stakeholders}
