Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -156,15 +156,15 @@
     \resumeSubheading
       {FlashMonk}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
-      \resumeItemListStart
-        \resumeItem{Redesigned the IMAP service, improving wait times by 16\% through event\textendash based mail fetch execution, auto\textendash retry mechanisms, and configurable domains.}
-        \resumeItem{Improved the email compose experience flow, reducing errors by 30\%, and migrated mail view APIs from a database to Elasticsearch, which reduced mailbox latency by 25\%.}
+       \resumeItemListStart
+        \resumeItem{Redesigned \textbf{IMAP service} with event-based mail fetch, auto-retry, \textbf{improving wait times by 16\%}, enabling configurable domains}
+        \resumeItem{Enhanced email compose experience flow, \textbf{reducing user errors by 30\%}, and migrated mail view APIs from database to \textbf{Elasticsearch}, \textbf{cutting mailbox latency by 25\%}}
         % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         % \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
-        % \resumeItem{Migrated 40 microservices from CloudWatch to Last9 with OTEL, achieving a 30\% reduction in costs, right\textendash sized ES/RDS clusters, dropped a 300M index, and decommissioned 2 redundant RDS instances and 1 EFS.}
-        % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs}
-        % \resumeItem{Re\textendash engineered email info nested partitions, deleted 3 billion promotional email records from S3 and the database, and migrated Mime RDS to S3, resulting in a 30\% reduction in RDS costs}
-        \resumeItem{Line}
+        \resumeItem{Migrated \textbf{40 microservices} from CloudWatch to Last9 with \textbf{OTEL}, \textbf{achieving 30\% cost reduction} and right-sized ES/RDS clusters}
+        \resumeItem{Re-engineered email nested partitions and \textbf{deleted 3 billion promotional records} from S3 and database, optimizing storage infrastructure}
+        \resumeItem{Migrated Mime data from \textbf{RDS to S3}, consolidating email storage architecture and \textbf{reducing RDS costs by 30\%}}
+        \resumeItem{Decommissioned redundant infrastructure including \textbf{300M index}, \textbf{2 RDS instances}, and 1 EFS, streamlining system architecture}
       \resumeItemListEnd
       \vspace{1.5pt}
 
