Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -139,8 +139,8 @@
 \vspace{2pt}
 \textbf{Frameworks \& ORMs}{: Spring Boot, Gin, Express.js, Flask, jOOQ, Mongoose, Prisma, Gorm} \\
 \vspace{2pt}
-\textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
-\vspace{2pt}
+% \textbf{Libraries}{: React.js, Jest, Joi, SuperTest, Colly, Playwright, BullMQ, Standard Template Library} \\
+% \vspace{2pt}
 \textbf{Databases}{: Redis, MongoDB, DynamoDB, Elasticsearch, SQLite, SQL Server, PostgreSQL, pgvector} \\
 \vspace{2pt}
 \textbf{Deployment}{: Docker, GitHub Actions, Azure DevOps Build \& Release Pipelines, Deployment Groups, IIS, Nginx, Last9} \\
@@ -157,14 +157,25 @@
       {FlashMonk}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
        \resumeItemListStart
-        \resumeItem{Redesigned \textbf{IMAP service} with event-based mail fetch, auto-retry, \textbf{improving wait times by 16\%}, enabling configurable domains}
-        \resumeItem{Enhanced email compose experience flow, \textbf{reducing user errors by 30\%}, and migrated mail view APIs from database to \textbf{Elasticsearch}, \textbf{cutting mailbox latency by 25\%}}
+        % \resumeItem{Redesigned \textbf{IMAP service} with event-based mail fetch, auto-retry, \textbf{improving wait times by 16\%}, enabling configurable domains}
+        % \resumeItem{Enhanced email compose experience flow, \textbf{reducing user errors by 30\%}, and migrated mail view APIs from database to \textbf{Elasticsearch}, \textbf{cutting mailbox latency by 25\%}}
+
+        %%%%% Stand By %%%%%
         % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         % \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
-        \resumeItem{Migrated \textbf{40 microservices} from CloudWatch to Last9 with \textbf{OTEL}, \textbf{achieving 30\% cost reduction} and right-sized ES/RDS clusters}
-        \resumeItem{Re-engineered email nested partitions and \textbf{deleted 3 billion promotional records} from S3 and database, optimizing storage infrastructure}
-        \resumeItem{Migrated Mime data from \textbf{RDS to S3}, consolidating email storage architecture and \textbf{reducing RDS costs by 30\%}}
-        \resumeItem{Decommissioned redundant infrastructure including \textbf{300M index}, \textbf{2 RDS instances}, and 1 EFS, streamlining system architecture}
+        %%%%% Stand By %%%%%
+        
+        % \resumeItem{Migrated \textbf{40 microservices} from CloudWatch to Last9 with \textbf{OTEL}, \textbf{achieving 30\% cost reduction} and right-sized ES/RDS clusters}
+        % \resumeItem{Re-engineered email nested partitions and \textbf{deleted 3 billion promotional records} from S3 and database, optimizing storage infrastructure}
+        % \resumeItem{Migrated Mime data from \textbf{RDS to S3}, consolidating email storage architecture and \textbf{reducing RDS costs by 30\%}}
+        % \resumeItem{Decommissioned redundant infrastructure including \textbf{300M index}, \textbf{2 RDS instances}, and 1 EFS, streamlining system architecture}
+
+        \resumeItem{Created Data Service APIs to migrate Cancer Registry System, from \textbf{PL/SQL} to \textbf{TS}, leveraging \textbf{MS SQL} \& Prisma}
+        \resumeItem{Migrated .NET Web Services with RPC client \& SOAP APIs with WSDL in Node.js, consuming DLLs via FFI wrappers}
+        \resumeItem{Scheduled \textbf{cron} job consuming HL7 documents with locks and \textbf{configurable} interval, scaled to cluster threads via \textbf{IPC}}
+        \resumeItem{Wrote unit \& integration test suites with a coverage of \textbf{85\%}, optimized on\textendash premise infra using Grafana's \textbf{K6} perf tests}
+        \resumeItem{Configured build pipeline with static code analyzer, and release pipeline with Azure agents, deploying to Windows \textbf{IIS}}
+        
       \resumeItemListEnd
       \vspace{1.5pt}
 
