Updates from Overleaf

--- a/aashish_kumar.tex
+++ b/aashish_kumar.tex
@@ -157,24 +157,18 @@
       {FlashMonk}{Dec 2024 - Present}
       {Software Development Engineer}{Bangalore}
        \resumeItemListStart
-        % \resumeItem{Redesigned \textbf{IMAP service} with event-based mail fetch, auto-retry, \textbf{improving wait times by 16\%}, enabling configurable domains}
-        % \resumeItem{Enhanced email compose experience flow, \textbf{reducing user errors by 30\%}, and migrated mail view APIs from database to \textbf{Elasticsearch}, \textbf{cutting mailbox latency by 25\%}}
+        \resumeItem{Redesigned \textbf{IMAP} service with event-based mail fetch, auto-retry, configurable domains, improved wait times by \textbf{16\%}}
+        \resumeItem{Enhanced email compose flow, reducing errors by \textbf{30\%}, and migrated the mail view API to \textbf{ES}, cutting latency by \textbf{25\%}}
 
         %%%%% Stand By %%%%%
         % \resumeItem{Migrated to an Affiliate Campaign and reward system, including campaign execution, audience segmentation, and click\textendash through analytics, reducing customer engagement costs by 80\%.}
         % \resumeItem{Developed a Collections Data Ingestion Service, Collections Dimension Service, and a Collections Central Go Orchestrator, utilizing a Vector DB, ELSER, ES Mappings, and Product/Brand Semantic Search.}
         %%%%% Stand By %%%%%
         
-        % \resumeItem{Migrated \textbf{40 microservices} from CloudWatch to Last9 with \textbf{OTEL}, \textbf{achieving 30\% cost reduction} and right-sized ES/RDS clusters}
-        % \resumeItem{Re-engineered email nested partitions and \textbf{deleted 3 billion promotional records} from S3 and database, optimizing storage infrastructure}
-        % \resumeItem{Migrated Mime data from \textbf{RDS to S3}, consolidating email storage architecture and \textbf{reducing RDS costs by 30\%}}
-        % \resumeItem{Decommissioned redundant infrastructure including \textbf{300M index}, \textbf{2 RDS instances}, and 1 EFS, streamlining system architecture}
-
-        \resumeItem{Created Data Service APIs to migrate Cancer Registry System, from \textbf{PL/SQL} to \textbf{TS}, leveraging \textbf{MS SQL} \& Prisma}
-        \resumeItem{Migrated .NET Web Services with RPC client \& SOAP APIs with WSDL in Node.js, consuming DLLs via FFI wrappers}
-        \resumeItem{Scheduled \textbf{cron} job consuming HL7 documents with locks and \textbf{configurable} interval, scaled to cluster threads via \textbf{IPC}}
-        \resumeItem{Wrote unit \& integration test suites with a coverage of \textbf{85\%}, optimized on\textendash premise infra using Grafana's \textbf{K6} perf tests}
-        \resumeItem{Configured build pipeline with static code analyzer, and release pipeline with Azure agents, deploying to Windows \textbf{IIS}}
+        \resumeItem{Migrated \textbf{40 services} from CloudWatch to Last9 with \textbf{OTEL}, achieving \textbf{30\%} cost reduction and better observability}
+        \resumeItem{Optimized infrastructure by decommissioning \textbf{300M index}, \textbf{2 RDS instances}, 1 EFS, right-sizing ES/RDS clusters}
+        \resumeItem{Migrated email mime data from \textbf{RDS to S3}, consolidating email storage architecture and reducing RDS costs by \textbf{30\%}}
+        \resumeItem{Re-engineered email information table with nested partitions and deleted \textbf{3B} promotional records from S3 and database}
         
       \resumeItemListEnd
       \vspace{1.5pt}
@@ -198,8 +192,8 @@
         \resumeItem{Designed \textbf{UUID} for CGS Dashboard versioning and improved cadence from \textbf{weekly to every second} in the EMR job}
         \resumeItem{Revamped Audit Log DynamoDB to store metadata for CGS Dashboard, tracking published versions in CGS Version UI}
         % \resumeItem{CGS UI: Enhanced with filters, publish time, and the EMR status display}
-        \resumeItem{Reengineered the \textbf{CSV View} to render the dashboard directly from \textbf{S3}, \textbf{eliminating the cost} of maintaining the DDB}
-        \resumeItem{Devised \textbf{CSV diff} algorithm to compare dashboard versions by primary index, providing list of changes to stakeholders}
+        \resumeItem{Re-engineered \textbf{CSV View \& Diff} modules to render dashboard from \textbf{S3}, \textbf{eliminating the cost} of maintaining DDB}
+        % \resumeItem{Devised \textbf{CSV diff} algorithm to compare dashboard versions by primary index, providing list of changes to stakeholders}
       \resumeItemListEnd
     
   \resumeSubHeadingListEnd
